adjusted the css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <div class="converter-box">
             <form id="converter-form">
                 <textarea id="video-url" placeholder="Paste link here" required></textarea>
-                <p class="tip">💡 Tip: Use short, punctuated sentences.</p>
                 <button id="generate-button" type="submit" style="background-color: #3e5c7b; color: white;">
                     <i id="cog-icon" class="fas fa-cog"></i> Generate Video
                 </button>
@@ -32,7 +31,7 @@
                 </select>
                 <button id="download-button" style="background-color: #3e5c7b; color: white;">Download</button>
             </div>
-            <p class="note">Generate for free. No signup needed</p>
+            <p class="note">💡Generate for free. No signup needed</p>
         </div>
         <footer>
             <button class="explore-tools">More tools soon ➔</button>
