added media on css for responsiveness

--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
             <button class="home-icon">&#8962;</button>
         </div>
         <div class="navbar-right">
-            <button class="icon github-icon">&#xf09b;</button>
-            <button class="icon twitter-icon">&#xf099;</button>
-            <button class="icon info-icon">&#xf129;</button>
-            <button class="icon theme-icon">&#xf185;</button>
+            <i class="fa fa-question-circle" aria-hidden="true"></i>
         </div>
     </nav>
     <header>
         <h1>Tube To GO!</h1>
-        <p style="font-size: 80%;">Tube To Go: Dahil sa MP4, YouTube Mo, Madaling Kopyahin!</p>
+        <p style="font-size: 80%;">Dahil sa Tube To Go, YouTube Mo, Madaling Kopyahin!</p>
     </header>
     <div class="converter-box">
         <form id="converter-form">
